crates/backyard-parser/tests/snapshots/exit__basic.snap
---
source: crates/backyard-parser/tests/exit.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: exit
    statement: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 4
        offset: 4
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 4
    offset: 4
leadings: []
trailings: []
